feat: custom code added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         }
     </script>
     <link rel="canonical" href="https://diucoverpage.com/">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9557711562563778"
+     crossorigin="anonymous"></script>
 
-    <meta name="google-adsense-account" content="ca-pub-9557711562563778">
-    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="images/logo1.png">
@@ -60,67 +60,55 @@
 <!-- ----------------------------------------------------------- -->
     <div class="main-left" id="main-left">
         <!-- Ad goes here  -->
-        <amp-ad width="100vw" height="320"
-        type="adsense"
-        data-ad-client="ca-pub-9557711562563778"
-        data-ad-slot="8122601470"
-        data-auto-format="rspv"
-        data-full-width="">
-     <div overflow=""></div>
-   </amp-ad>
     </div> 
 <!-- ------------------------------------------------------------ -->
-    <div class="main-mid" id="main-mid">
-        <section>
-            <div class="icon-section">
-                <h1>Cover Pages</h1>
-                <div>
-                    <a href="src/assignment.html">
-                        <div class="icon-box">
-                            <i class="fa fa-pencil-square-o"></i>
-                            <span class="icon-label">Assignment</span>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="src/lab-report.html">
-                        <div class="icon-box">
-                            <i class="fas fa-flask"></i>
-                            <span class="icon-label">Lab Report</span>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="src/final-lab-report.html">
-                        <div class="icon-box">
-                            <i class="fas fa-file-alt"></i>
-                            <span class="icon-label">Final Lab Report</span>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="src/lab-report-index.html">
-                        <div class="icon-box">
-                            <i class="fas fa-list-ol"></i>
-                            <span class="icon-label">Lab Index</span>
-                        </div>
-                    </a>
-                </div>
+<div class="main-mid" id="main-mid">
+    <section>
+        <div class="icon-section">
+            <h1>Cover Pages</h1>
+            <div>
+                <a href="src/assignment.html">
+                    <div class="icon-box">
+                        <i class="fa fa-pencil-square-o"></i>
+                        <span class="icon-label">Assignment</span>
+                        <p>Create professional cover pages for your academic assignments with customizable templates.</p>
+                    </div>
+                </a>
             </div>
-        </section>
-    </div>
+            <div>
+                <a href="src/lab-report.html">
+                    <div class="icon-box">
+                        <i class="fas fa-flask"></i>
+                        <span class="icon-label">Lab Report</span>
+                        <p>Design structured cover pages for lab reports to present your experiments clearly.</p>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="src/final-lab-report.html">
+                    <div class="icon-box">
+                        <i class="fas fa-file-alt"></i>
+                        <span class="icon-label">Final Lab Report</span>
+                        <p>Generate polished cover pages for comprehensive final lab reports.</p>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="src/lab-report-index.html">
+                    <div class="icon-box">
+                        <i class="fas fa-list-ol"></i>
+                        <span class="icon-label">Lab Index</span>
+                        <p>Organize your lab reports with a clear and concise cover page index.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+</div>
 
 <!-- ------------------------------------------------------------ -->
     <div class="main-right" id="main-right">
             <!-- Ad goes here  -->
-            <amp-ad width="100vw" height="320"
-            type="adsense"
-            data-ad-client="ca-pub-9557711562563778"
-            data-ad-slot="8122601470"
-            data-auto-format="rspv"
-            data-full-width="">
-         <div overflow=""></div>
-       </amp-ad>
     </div>
 <!-- ---------------------------------------------------- -->
 
