--- a/src/termsandcondition.html
+++ b/src/termsandcondition.html
@@ -58,7 +58,7 @@
 <!-- ----------------------------------------------------------- -->
     <div class="main-left" id="main-left">
         <!-- Ad goes here  -->
-        
+    </div>
 <!-- ------------------------------------------------------------ -->
     <div class="main-mid" id="main-mid">
         <div class="terms">
