update: ui design, functions, features and more.
DIU Cover Page

A free, easy-to-use web app for Daffodil International University students to instantly create assignment, lab report, and index cover pages. Just fill out a form, download your cover as PDF or image, and print for submission. 
Features include responsive design, privacy policy, and SEO optimization. No login required—just fast, clean cover page generation for DIU coursework.

--- a/index.html
+++ b/index.html
@@ -1,158 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>DIU Cover Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIU Cover Page</title>
-    <meta name="author" content="Tasnim Farhan Fahim" />
-    <meta name="description" content="Create DIU Cover Page | Are you a student of DIU? You can now create your Assignment, Lab Report, Lab Index Cover Page by easily filling the form, download and print out the cover page in case of emergency like BLC submission. It's Free and Easy to use." />
-    <meta name="keywords" content="DIU Cover Page, Create DIU Cover Page, Create Assignment Cover Page, Create Lab Report Cover Page, Create Lab Index Cover Page" />
+    <meta name="author" content="Tasnim Farhan Fahim">
+    <meta name="description" content="Create DIU Cover Page | Are you a student of DIU? You can now create your Assignment, Lab Report, Lab Index Cover Page by easily filling the form, download and print out the cover page in case of emergency like BLC submission. It's Free and Easy to use.">
+    <meta name="keywords" content="DIU Cover Page, Create DIU Cover Page, Create Assignment Cover Page, Create Lab Report Cover Page, Create Lab Index Cover Page">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://diucoverpage.com/">
+
+    <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
         {
-          "@context": "http://schema.org",
-          "@type": "WebSite",
-          "name": "Create DIU Cover Pages",
-          "url": "https://diucoverpage.com"
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "DIU Cover Page",
+        "url": "https://diucoverpage.com",
+        "author": {
+            "@type": "Person",
+            "name": "Tasnim Farhan Fahim"
+        }
         }
     </script>
-    <link rel="canonical" href="https://diucoverpage.com/">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9557711562563778"
-     crossorigin="anonymous"></script>
 
-   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Google Ads -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9557711562563778"
+        crossorigin="anonymous"></script>
+
+    <!-- Fonts & Icons -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="images/logo1.png">
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/logo1.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-<div class="header" id="header">
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-    <div class="header-left" id="header-left">
-    </div>
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-    <div class="header-mid" id="header-mid">
-        <div>      
-            <nav class="nav-bar">
-                <div class="nav-logo">
-                    <img class="nav-icon" src="images/nav-logo-diu.png" alt="">
-                </div>
-                <div class="nav-button">
-                    <div class="dropdown">
-                        <button> <i class="fa fa-home"></i> Home</button>
-                    </div>
-                </div>
-            </nav>
-        </div>
-  
-    </div>
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-    <div class="header-right" id="header-right">
+    <!-- Header Section -->
+    <header>
+        <img src="../img/header-diu.png" alt="DIU Cover Page Logo">
+        <button onclick="window.location.href='/'">
+            <i class="fas fa-home"></i> Home
+        </button>
+    </header>
+    <!-- Main Section -->
+    <section class="main">
+        <div class="main-container">
+            <h1>Welcome to DIU Cover Page</h1>
+            <!-- Introduction Section -->
+            <div class="introduction">
+                <p>
+                    Hello <strong>Daffodilian's!</strong> 🎉 Welcome to <strong>DIU Cover Page</strong> — your one-stop tool for creating professional DIU cover pages!✍️ No need to disturb your cover page maker friend 😉 — just use this site and get your assignment, lab report, final report, or index cover page done in minutes! 🚀
+                </p>
 
-    </div> 
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-</div>
+                <p>
+                    ⚡ Our easy-to-use forms let you generate, download, and print your cover pages instantly! Whether you're in a rush for a BLC submission ⏳ or just want a neat, standardized look, we've got you covered ✅.
+                </p>
 
-<!-- ------------------------------------------------------------------------------------------------------------- -->
+                <p>
+                    ⏱️ Save time, avoid mistakes, and impress your teachers with perfectly formatted cover pages. <br>
+                    It's 💯 free, fast, and always available—so focus on your studies and let us handle the paperwork! 📝
+                </p>
 
-<div class="main" id="main">
-<!-- ----------------------------------------------------------- -->
-    <div class="main-left" id="main-left">
-        <!-- Ad goes here  -->
-    </div> 
-<!-- ------------------------------------------------------------ -->
-<div class="main-mid" id="main-mid">
-    <section>
-        <div class="icon-section">
-            <h1>Cover Pages</h1>
-            <div>
-                <a href="src/assignment.html">
-                    <div class="icon-box">
-                        <i class="fa fa-pencil-square-o"></i>
-                        <span class="icon-label">Assignment</span>
-                        <p>Create professional cover pages for your academic assignments with customizable templates.</p>
-                    </div>
-                </a>
             </div>
-            <div>
-                <a href="src/lab-report.html">
-                    <div class="icon-box">
-                        <i class="fas fa-flask"></i>
-                        <span class="icon-label">Lab Report</span>
-                        <p>Design structured cover pages for lab reports to present your experiments clearly.</p>
-                    </div>
-                </a>
+            <!-- Desired Cover Page Selection Section -->
+            <p> <strong>Select a form to fill and generate:</strong></p>
+            <div class="form-links">
+                <a href="src/assignment_form.html"><i class="fas fa-file-alt"></i> Assignment Form</a>
+                <a href="src/lab_report_form.html"><i class="fas fa-flask"></i> Lab Report Form</a>
+                <a href="src/final_lab_report_form.html"><i class="fas fa-file-contract"></i> Final Lab Report Form</a>
+                <a href="src/lab_report_index_form.html"><i class="fas fa-tasks"></i> Lab Report Index Form</a>
             </div>
-            <div>
-                <a href="src/final-lab-report.html">
-                    <div class="icon-box">
-                        <i class="fas fa-file-alt"></i>
-                        <span class="icon-label">Final Lab Report</span>
-                        <p>Generate polished cover pages for comprehensive final lab reports.</p>
-                    </div>
-                </a>
+            <div style="margin-top:40px;">
+                <a href="/src/output.html" style="color:#2a3a5e;text-decoration:underline;">View Last Submission Result</a>
             </div>
-            <div>
-                <a href="src/lab-report-index.html">
-                    <div class="icon-box">
-                        <i class="fas fa-list-ol"></i>
-                        <span class="icon-label">Lab Index</span>
-                        <p>Organize your lab reports with a clear and concise cover page index.</p>
-                    </div>
-                </a>
+            <!-- Instruction to Creating Cover Page Section -->
+            <div class="instructions">
+                <h2>📘 How to Create Your DIU Cover Page</h2>
+                <ol>
+                    <li>
+                        <strong>Choose Your Cover Page Type:</strong>
+                        <br>
+                        Select the appropriate form for your needs from the options above (📄 Assignment, 📑 Lab Report, 📝 Final Lab Report, or 📂 Lab Report Index).
+                    </li>
+                    <li>
+                        <strong>Fill Out the Form:</strong>
+                        <br>
+                        ✍️ Enter all required information such as your name, ID, course details, teacher’s name, and any other relevant fields. Double-check for accuracy!
+                    </li>
+                    <li>
+                        <strong>Generate Your Cover Page:</strong>
+                        <br>
+                        ⚡ After filling the form, click the “Generate” button. Your cover page will be created instantly.
+                    </li>
+                    <li>
+                        <strong>Download or Print:</strong>
+                        <br>
+                        ⬇️ You can download your cover page as a PDF document or an Image for submission.
+                    </li>
+                    <li>
+                        <strong>View Last Submission:</strong>
+                        <br>
+                        👀 If you need to review your last submission, use the “View Last Submission Result” link above.
+                    </li>
+                    <li>
+                        <strong>Need Help?</strong> 
+                        <br>
+                        💡 For any issues or feedback, use the contact links in the bottom to reach out.
+                    </li>
+                </ol>
+                <h2>Results After Generation</h2>
+                <p><em>Note:</em> This page is formatted as <strong>A4 size (210mm x 297mm)</strong>. It will only fit within your document if the document <strong>layout</strong> is set to <strong>A4.</strong></p>
+                <p style="text-decoration: underline;">This is how your cover page will look like(example):</p>
+                <img src="/img/example-cover-page.png" alt="Example Cover Page after Generation">
+                <p>
+                    <em>Tip:</em> ✅ Make sure to use the latest information and follow your instructor’s guidelines for cover page formatting. This tool is designed to save you time and ensure your cover page looks professional!
+                </p>
             </div>
         </div>
     </section>
-</div>
-
-<!-- ------------------------------------------------------------ -->
-    <div class="main-right" id="main-right">
-            <!-- Ad goes here  -->
-    </div>
-<!-- ---------------------------------------------------- -->
-
-</div>
-<!-- ---------------------------------------------------Main End Here---------------------------------------------------------- -->
- 
-<div class="footer" id="footer">
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-    <div class="footer-left" id="footer-left">
-
-    </div>
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-    <div class="footer-mid" id="footer-mid">
-            <p class="feedback">For any feedback or suggestion, click the links bellow. </p>
-            <div class="social-links" id="social-links">
-                <a href="https://t.me/zero2fahim" target="_blank"><i class="fab fa-telegram"></i></a>
-                <a href="https://www.facebook.com/zero2fahim" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/zero2fahim" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com/tasnim-farhan-fahim" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/tasnim-farhan-fahim" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <!-- Footer Section -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-feedback">
+                <p>For any feedback or suggestion, click the links bellow:</p>
+                <ul class="footer-social-links">
+                    <li><a href="https://t.me/zero2fahim" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a></li>
+                    <li><a href="https://www.facebook.com/zero2fahim" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/zero2fahim" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://github.com/tasnim-farhan-fahim" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/tasnim-farhan-fahim" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
+                    </li>
+                </ul>
             </div>
-            <p> </p>     
-            <p>All rights reserved &copy<a href="https://github.com/tasnim-farhan-fahim" target="_blank">Tasnim Farhan Fahim <i class="fab fa-github"></i></a></p>
-            <p>Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a></p>
-            <div>
-                <br><br>
-                <a href="src/termsandcondition.html">Terms and Conditions  | </a>
-                <a href="src/privacyandpolicy.html"> Privacy and Policy</a>
-                <br>
+            <div class="footer-info">
+                <p>Created by <span>Tasnim Farhan Fahim</span></p>
+                <p class="footer-email"><a href="mailto:fahim22205101291@diu.edu.bd"><i class="fas fa-envelope"></i> Fahim22205101291@diu.edu.bd</a></p>
+                <div class="footer-links">
+                    <a href="/src/terms.html">Terms and Conditions</a> | 
+                    <a href="/src/policy.html">Privacy and Policy</a>
+                </div>
+                <p> All rights reserved &copy;DIU Cover Page 2025</p>
             </div>
-    </div>
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-    <div class="footer-right" id="footer-right">
-    
-    </div>
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-</div>
+        </div>
+    </footer>
 
-
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html-docx-js/0.4.0/html-docx.min.js"></script>
+    <!-- JS Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html-docx-js/0.4.0/html-docx.min.js" defer></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
