--- a/src/final_lab_report_form.html
+++ b/src/final_lab_report_form.html
@@ -99,7 +99,7 @@
                 <p>Created by <span>Tasnim Farhan Fahim</span></p>
                 <p class="footer-email"><a href="mailto:fahim22205101291@diu.edu.bd"><i class="fas fa-envelope"></i> Fahim22205101291@diu.edu.bd</a></p>
                 <div class="footer-links">
-                    <a href="../src/terms.html">Terms and Conditions</a> | 
+                    <a href="../src/term.html">Terms and Conditions</a> | 
                     <a href="../src/policy.html">Privacy and Policy</a>
                 </div>
                 <p> All rights reserved &copy;DIU Cover Page 2025</p>
@@ -114,3 +114,4 @@
     <script src="../scripts/script.js"></script>
 </body>
 </html>
+
