--- a/src/lab_report_index_form.html
+++ b/src/lab_report_index_form.html
@@ -144,8 +144,8 @@
                 <p>Created by <span>Tasnim Farhan Fahim</span></p>
                 <p class="footer-email"><a href="mailto:fahim22205101291@diu.edu.bd"><i class="fas fa-envelope"></i> Fahim22205101291@diu.edu.bd</a></p>
                 <div class="footer-links">
-                    <a href="src/term.html">Terms and Conditions</a> | 
-                    <a href="src/policy.html">Privacy and Policy</a>
+                    <a href="../src/term.html">Terms and Conditions</a> | 
+                    <a href="../src/policy.html">Privacy and Policy</a>
                 </div>
                 <p> All rights reserved &copy;DIU Cover Page 2025</p>
             </div>
@@ -159,3 +159,4 @@
   <script src="../scripts/script.js"></script>
 </body>
 </html>
+
