--- a/src/final_lab_report_form.html
+++ b/src/final_lab_report_form.html
@@ -60,7 +60,7 @@
                 <label>Teacher Name: <input type="text" id="teacherName" name="teacherName" placeholder="Enter teacher name" required></label>
                 <label>Designation: <input type="text" id="TeacherDesignation" name="TeacherDesignation" placeholder="Enter teacher's designation" required></label>
                 <label>Department: <input type="text" id="teacherDepartment" name="teacherDepartment" placeholder="Enter teacher's department" required></label>
-                <label>University: <input type="text" id="university" name="university" required></label>
+                <label>University: <input type="text" id="university" name="university" value="Daffodil International University" required></label>
             </fieldset>
             <fieldset>
                 <legend>Student Details</legend>
@@ -69,7 +69,7 @@
                 <label>Section: <input type="text" id="section" name="section" placeholder="Enter your section" required></label>
                 <label>Semester: <input type="text" id="semester" name="semester" placeholder="Enter your semester" required></label>
                 <label>Department: <input type="text" id="studentDepartment" name="studentDepartment" placeholder="Enter your department" required></label>
-                <label>University: <input type="text" id="studentUniversity" name="studentUniversity" required></label>
+                <label>University: <input type="text" id="studentUniversity" name="studentUniversity" value="Daffodil International University" required></label>
             </fieldset>
             <fieldset>
                 <legend>Submission Date</legend>
@@ -114,4 +114,5 @@
     <script src="../scripts/script.js"></script>
 </body>
 </html>
+
 
