--- a/template.html
+++ b/template.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="img/logo1.png" type="image/png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="../img/logo1.png" type="image/png">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -66,8 +66,8 @@
                 <p>Created by <span>Tasnim Farhan Fahim</span></p>
                 <p class="footer-email"><a href="mailto:fahim22205101291@diu.edu.bd"><i class="fas fa-envelope"></i> Fahim22205101291@diu.edu.bd</a></p>
                 <div class="footer-links">
-                    <a href="src/term.html">Terms and Conditions</a> | 
-                    <a href="src/policy.html">Privacy and Policy</a>
+                    <a href="../src/terms.html">Terms and Conditions</a> | 
+                    <a href="../src/policy.html">Privacy and Policy</a>
                 </div>
                 <p> All rights reserved &copy;DIU Cover Page 2025</p>
             </div>
@@ -81,3 +81,4 @@
     <script src="scripts/script.js"></script>
 </body>
 </html>
+
